[gd_scene load_steps=47 format=2]

[ext_resource path="res://LobbyVisitor.gd" type="Script" id=1]
[ext_resource path="res://small_man_sheet.png" type="Texture" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 0.6

[sub_resource type="CapsuleShape2D" id=44]
radius = 8.0
height = 16.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 28, 13, 28 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 13, 28, 13, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 26, 28, 13, 28 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 39, 28, 13, 28 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 52, 28, 13, 28 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 65, 28, 13, 28 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 78, 28, 13, 28 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 91, 28, 13, 28 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 56, 13, 28 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 13, 56, 13, 28 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 26, 56, 13, 28 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 39, 56, 13, 28 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 52, 56, 13, 28 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 65, 56, 13, 28 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 78, 56, 13, 28 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 91, 56, 13, 28 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 112, 13, 28 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 13, 112, 13, 28 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 26, 112, 13, 28 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 39, 112, 13, 28 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 52, 112, 13, 28 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 65, 112, 13, 28 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 78, 112, 13, 28 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 91, 112, 13, 28 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 0, 84, 13, 28 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 13, 84, 13, 28 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 26, 84, 13, 28 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 39, 84, 13, 28 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 52, 84, 13, 28 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 65, 84, 13, 28 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 78, 84, 13, 28 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 91, 84, 13, 28 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 13, 28 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 13, 0, 13, 28 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 26, 0, 13, 28 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 39, 0, 13, 28 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 52, 0, 13, 28 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 65, 0, 13, 28 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 78, 0, 13, 28 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 91, 0, 13, 28 )

[sub_resource type="SpriteFrames" id=43]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "back",
"speed": 8.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "side",
"speed": 8.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "diag_back",
"speed": 8.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "diag_fore",
"speed": 8.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "fore",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0
height = 16.0

[node name="LobbyVisitor" type="PathFollow2D"]
position = Vector2( 24, 384 )
rotate = false
loop = false
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
physics_material_override = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 44 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 43 )
animation = "diag_back"
frame = 7
playing = true

[node name="VisitorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisitorArea"]
shape = SubResource( 2 )

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="VisitorArea" to="." method="_on_VisitorArea_body_entered"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
